Follow-up to bug 1174702 - correctly align the title of the web page for the checkbox in the context editing. r=andreio
UltraBlame original commit: 4e76075fa405fb0d609c473479f312cfd7172740

--- a/browser/components/loop/content/shared/css/common.css
+++ b/browser/components/loop/content/shared/css/common.css
@@ -2231,6 +2231,34 @@ overflow
 :
 hidden
 ;
+text
+-
+align
+:
+left
+;
+}
+html
+[
+dir
+=
+"
+rtl
+"
+]
+.
+checkbox
+-
+label
+.
+ellipsis
+{
+text
+-
+align
+:
+right
+;
 }
 .
 context
